--- a/DataAnnotations.Reference.Assemblies.UnitTests/DataAnnotations.Reference.Assemblies.UnitTests.csproj
+++ b/DataAnnotations.Reference.Assemblies.UnitTests/DataAnnotations.Reference.Assemblies.UnitTests.csproj
@@ -1,17 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <!-- <TargetFramework>netstandard2.0</TargetFramework> -->
     <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="System.ComponentModel.Annotations"/>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" />
+    <PackageReference Include="Basic.Reference.Assemblies" Version="1.2.4" />
   </ItemGroup>
 
   <ItemGroup>
